Devoped 'Get intouch' form

--- a/index.html
+++ b/index.html
@@ -42,12 +42,16 @@
         Vitae similique labore impedit? Aspernatur perferendis maxime unde facilis voluptatibus! Expedita itaque officiis esse id incidunt est pariatur, vero eos recusandae veritatis, odio blanditiis libero iusto modi doloribus quidem autem.</p>
     </section>
     <section>
-        <h4>GET INTOUCH</h4>
-        <p>
-            <form action="">
-                
+        <h4>GET INTOUCH WITH ME</h4>
+            <form action="" method="post">
+                <label for="name">NAME</label>
+                <input type="text" id="name" placeholder="Enter Your Name" required>
+                <label for="email">Emai</label>
+                <input type="email" id="email " placeholder="Enter Your Email required">
+                <label for="message">Message</label>
+                <textarea name="message" id="message" cols="60" rows="10" placeholder="Enter Your Message " required></textarea>
+                <input type="submit" value="submit" id="submit-btn">
             </form>
-        </p>
     </section>
 </body>
 </html>
