Added footer content.

--- a/index.html
+++ b/index.html
@@ -71,5 +71,9 @@
                 <input type="submit" value="submit" id="submit-btn">
             </form>
     </section>
+    <footer>
+        <p>&copy;Copyright 2022</p>
+        <p>Build By <a href="">SAMWEL OMWENGA</a></p>
+    </footer>
 </body>
 </html>
