--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="/public/styles.css">
     <title>SAMWEL OMWENGA PORTFOLIO</title>
 </head>
-<body>
+<body class="to-primary-light-blue">
     <header>
-       <p>SAMWEL <span>OMWENGA</span></p>
+       <p class="text-2xl font-semibold"><span>SAMWEL</span> <span>OMWENGA</span></p>
         <ul>
             <li>ABOUT ME </li>
             <li>SKILLS</li>
@@ -65,7 +65,7 @@
             <form action="" method="post">
                 <label for="name">NAME</label>
                 <input type="text" id="name" placeholder="Enter Your Name" required>
-                <label for="email">Emai</label>
+                <label for="email">Email</label>
                 <input type="email" id="email " placeholder="Enter Your Email required">
                 <label for="message">Message</label>
                 <textarea name="message" id="message" cols="60" rows="10" placeholder="Enter Your Message " required></textarea>
