--- a/public/index.html
+++ b/public/index.html
@@ -47,35 +47,37 @@
     </section>
     <section>
         <h3>SOME OF MY RECENT PROJECTS<h3>
-       <div>
-        <a href=""><img src="assests\clipboard landing page-desktop-design.jpg" alt="" loading="lazy"></a>
-        <a href=""><img src="assests\four-card-feature-section-desktop-design.jpg" alt=""loading="lazy"></a>
-        <a href=""><img src="assests\nft-preview-card-desktop-design.jpg" alt=""loading="lazy"></a>
-        <a href=""><img src="assests\stats-preview-card-desktop-design.jpg" alt=""loading="lazy"></a>
-        <a href=""><img src="assests\flyo-landing-page-with-two-column-desktop-design.jpg" alt=""loading="lazy"></a>
+       <div class="grid gap-3">
+        <div class="h-3">
+            <a href=""><img src="../assests\clipboard landing page-desktop-design.jpg" alt="" loading="lazy"></a>
+        </div>
+        <a href=""><img src="../assests\four-card-feature-section-desktop-design.jpg" alt=""loading="lazy"></a>
+        <a href=""><img src="../assests\nft-preview-card-desktop-design.jpg" alt=""loading="lazy"></a>
+        <a href=""><img src="../assests\stats-preview-card-desktop-design.jpg" alt=""loading="lazy"></a>
+        <a href=""><img src="../assests\flyo-landing-page-with-two-column-desktop-design.jpg" alt=""loading="lazy"></a>
         <a href=""><img src="" alt=""loading="lazy"></a>
        </div>
     </section>
     <section class="rounded-xl shadow-2xl mb-4 mx-6">
         <h4>GET INTOUCH WITH ME</h4>
-            <form action="" method="post" class="text-start">
+            <form action="" method="post" class="text-start mx-4 grid gap-7">
                <div>
-                <label for="name">NAME</label>
-                <input type="text" id="name" placeholder="Enter Your Name" required>
+                <label class="field-label" for="name">NAME</label>
+                <input class="input-field mt-2 pl-2 h-9" type="text" id="name" placeholder="Enter Your Name" required>
                </div>
                 <div>
-                    <label for="email">Email</label>
-                <input type="email" id="email " placeholder="Enter Your Email" required>
+                    <label class="field-label " for="email">EMAIL</label>
+                <input  class="input-field mt-2 pl-2 h-9" type="email" id="email " placeholder="Enter Your Email" required>
                 </div>
                <div>
-                <label for="message">Message</label>
-                <textarea name="message" id="message" cols="60" rows="10" placeholder="Enter Your Message " required></textarea>
+                <label class="field-label" for="message">MESSAGE</label>
+                <textarea  class="input-field mt-2 pt-2 pl-2" name="message" id="message" cols="60" rows="10" placeholder="Enter Your Message " required></textarea>
                </div>
-                <input type="submit" value="submit" id="submit-btn">
+                <input class="bg-primary-dark-green py-1 w-full text-xl uppercase rounded-md" type="submit" value="submit" id="submit-btn">
             </form>
     </section>
     <footer class="grid text-center bg-primary-dark-green py-4">
-        <p>&copy;Copyright 2022</p>
+        <p>&copy;<span class="ml-2">Copyright 2022</span></p>
         <p>Build By <a href="">SAMWEL OMWENGA</a></p>
     </footer>
 </body>
