--- a/public/index.html
+++ b/public/index.html
@@ -47,9 +47,9 @@
     </section>
     <section>
         <h3>SOME OF MY RECENT PROJECTS<h3>
-       <div class="grid gap-3">
-        <div class="h-3">
-            <a href=""><img src="../assests\clipboard landing page-desktop-design.jpg" alt="" loading="lazy"></a>
+       <div class="">
+        <div class="h-96">
+            <img src="../assests\clipboard landing page-desktop-design.jpg" alt="" loading="lazy">
         </div>
         <a href=""><img src="../assests\four-card-feature-section-desktop-design.jpg" alt=""loading="lazy"></a>
         <a href=""><img src="../assests\nft-preview-card-desktop-design.jpg" alt=""loading="lazy"></a>
