--- a/public/index.html
+++ b/public/index.html
@@ -47,9 +47,11 @@
     </section>
     <section>
         <h3>SOME OF MY RECENT PROJECTS<h3>
-       <div class="">
-        <div class="h-96">
-            <img src="../assests\clipboard landing page-desktop-design.jpg" alt="" loading="lazy">
+       <div class="grid place-items-center">
+        <div class="rounded-xl shadow-2xl mb-4">
+            <img class="p-6 " src="../assests\clipboard landing page-desktop-design.jpg" alt="" loading="lazy">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt assumenda in soluta nesciunt fuga aperiam nihil, alias minima asperiores minus, nostrum ea eaque. Laboriosam, quae itaque iste sapiente magni atque!
+            </p>
         </div>
         <a href=""><img src="../assests\four-card-feature-section-desktop-design.jpg" alt=""loading="lazy"></a>
         <a href=""><img src="../assests\nft-preview-card-desktop-design.jpg" alt=""loading="lazy"></a>
