Chnge projects image  *To have sizable image for web layout

--- a/public/index.html
+++ b/public/index.html
@@ -49,15 +49,15 @@
         <h3>SOME OF MY RECENT PROJECTS<h3>
        <div class="grid place-items-center">
         <div class="rounded-xl shadow-2xl mb-4">
-            <img class="p-6 " src="../assests\clipboard landing page-desktop-design.jpg" alt="" loading="lazy">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt assumenda in soluta nesciunt fuga aperiam nihil, alias minima asperiores minus, nostrum ea eaque. Laboriosam, quae itaque iste sapiente magni atque!
-            </p>
+            <img class="p-6 " src="../assests\clip board-desktop-preview.jpg" alt="" loading="lazy">
+            <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt assumenda in soluta nesciunt fuga aperiam nihil, alias minima asperiores minus, nostrum ea eaque. Laboriosam, quae itaque iste sapiente magni atque!
+            </p> -->
         </div>
-        <a href=""><img src="../assests\four-card-feature-section-desktop-design.jpg" alt=""loading="lazy"></a>
-        <a href=""><img src="../assests\nft-preview-card-desktop-design.jpg" alt=""loading="lazy"></a>
-        <a href=""><img src="../assests\stats-preview-card-desktop-design.jpg" alt=""loading="lazy"></a>
-        <a href=""><img src="../assests\flyo-landing-page-with-two-column-desktop-design.jpg" alt=""loading="lazy"></a>
         <a href=""><img src="" alt=""loading="lazy"></a>
+        <a href=""><img src="../assests\stats-preview-card-desktop-preview.jpg" alt=""loading="lazy"></a>
+        <a href=""><img src="../assests\flyo-landing-page-desktop-preview.jpg" alt=""loading="lazy"></a>
+        <a href=""><img src="../assests\nft-preview-card-desktop-preview.jpg" alt=""loading="lazy"></a>
+        <a href=""><img src="../assests\four-card-feature-section-desktop-preview.jpg" alt=""loading="lazy"></a>
        </div>
     </section>
     <section class="rounded-xl shadow-2xl mb-4 mx-6">
