Add scroll up arroow

--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,9 @@
         </a>
         <a href=""></a>
     </div>
-    
+    <div class="fixed bottom-4 right-4">
+        <svg class=" h-12 w-12 cursor-pointer" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 64 64"><circle cx="32" cy="32" r="30" fill="#4fd1d9"/><path fill="#fff" d="M48 30.3L32 15L16 30.3h10.6V49h10.3V30.3z"/></svg>
+    </div>
     <footer class="grid text-center bg-primary-dark-green py-4">
         <p>&copy;<span class="ml-2">Copyright 2022</span></p>
         <p>Build By <a href="">SAMWEL OMWENGA</a></p>
