--- a/public/index.html
+++ b/public/index.html
@@ -7,27 +7,33 @@
     <link rel="stylesheet" href="/public/styles.css">
     <title>SAMWEL OMWENGA PORTFOLIO</title>
 </head>
-<body class="text-neutral-dark-green py-14">
-    <nav class="flex place-content-between place-items-center mx-8 mb-16">
-       <p class="text-xl font-semibold mb-4 text-primary-dark-green"><span class="">SAMWEL</span> <span>OMWENGA</span></p>
-        <ul class="hidden md:contents text-primary-light-green">
-            <li>ABOUT ME </li>
-            <li>SKILLS</li>
-            <li>RECENT PROJECTS</li>
-            <li>GET INTOUCH</li>
-        </ul>
-        <button>
-            <svg class="" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="2em" height="2em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 16 16"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M2.75 12.25h10.5m-10.5-4h10.5m-10.5-4h10.5"/></svg>
-        </button>
-    </nav>
-    <section class="mx-10 rounded-xl shadow-2xl">
-        <h1>ABOUT ME</h1>
+<body class="text-neutral-dark-green py-10">
+    <header class="bg-[url('/assests/image_2d751ad1-8728-4382-80be-5b26d66cb3b920220613_192526.jpg')] bg-no-repeat bg-auto bg-center">
+        <nav class="flex place-content-between place-items-center mx-8 mb-16 md:mr-32">
+            <p class="text-2xl md:text-3xl font-semibold mb-4 text-primary-dark-green"><a href="#">SAMWEL OMWENGA</a></p>
+             <ul class="hidden   text-primary-light-green font-semibold text-xl md:flex md:gap-x-12">
+                 <li><a href="">ABOUT ME</a> </li>
+                 <li><a href="">SKILLS</a></li>
+                 <li><a href="">RECENT PROJECTS</a></li>
+                 <li><a href="">GET INTOUCH</a></li>
+             </ul>
+             <button class="md:hidden">
+                 <svg class="" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="2em" height="2em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 16 16"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M2.75 12.25h10.5m-10.5-4h10.5m-10.5-4h10.5"/></svg>
+             </button>
+         </nav>
+         <div class="md:mx-32">
+            <p>HELLO THERE, I`M <span>SAMWEL OMWENGA</span></p>
+            <p><span>SOFTWARE DEVELOPER+</span><span>QA ENGINER+</span><span>TECHNICAL WRITTTER</span></p>
+        </div>
+    </header>
+    <section class="mx-10 rounded-xl shadow-2xl md:mx-32">
+        <h1><a href="#">ABOUT ME</a></h1>
         <p class="px-6 pb-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni iusto ad nobis quibusdam modi similique. Nihil, quibusdam soluta molestias Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, sapiente tempora soluta dicta ut sequi, fugiat beatae repellendus ipsum animi voluptatum perspiciatis repudiandae vero cum. Perferendis facilis dolores quis odit.
         Ad placeat obcaecati quibusdam, suscipit similique, aperiam distinctio quia voluptatum ipsa culpa sed illum cum? Dolor ab quibusdam fugit laborum laudantium architecto eveniet facere voluptatum, libero natus nulla ea corporis!
         Sint rerum necessitatibus molestias laborum, voluptatem, dolores sed maxime error in consequuntur atque natus? Nobis fugit voluptatem voluptate, porro accusantium nulla praesentium accusamus vero voluptatibus perferendis, ducimus labore, deserunt sint.</p>
     </section>
-    <section class="">
-        <h2>SKILLS</h2>
+    <section class="md:mx-32">
+        <h2><a href="#">MY SKILLS</a></h2>
        <div class="grid grid-cols-3 gap-3 p-6 place-items-center content-center">
            <div class="skills-svg"> 
             <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="5rem" height="5rem" preserveAspectRatio="xMidYMid meet" viewBox="0 0 256 361"><path fill="#E44D26" d="m255.555 70.766l-23.241 260.36l-104.47 28.962l-104.182-28.922L.445 70.766h255.11Z"/><path fill="#F16529" d="m128 337.95l84.417-23.403l19.86-222.49H128V337.95Z"/><path fill="#EBEBEB" d="M82.82 155.932H128v-31.937H47.917l.764 8.568l7.85 88.01H128v-31.937H85.739l-2.919-32.704Zm7.198 80.61h-32.06l4.474 50.146l65.421 18.16l.147-.04V271.58l-.14.037l-35.568-9.604l-2.274-25.471Z"/><path d="M24.18 0h16.23v16.035h14.847V0h16.231v48.558h-16.23v-16.26H40.411v16.26h-16.23V0Zm68.65 16.103H78.544V0h44.814v16.103h-14.295v32.455h-16.23V16.103h-.001ZM130.47 0h16.923l10.41 17.062L168.203 0h16.93v48.558h-16.164V24.49l-11.166 17.265h-.28L146.35 24.49v24.068h-15.88V0Zm62.74 0h16.235v32.508h22.824v16.05h-39.06V0Z"/><path fill="#FFF" d="M127.89 220.573h39.327l-3.708 41.42l-35.62 9.614v33.226l65.473-18.145l.48-5.396l7.506-84.08l.779-8.576H127.89v31.937Zm0-64.719v.078h77.143l.64-7.178l1.456-16.191l.763-8.568H127.89v31.86Z"/></svg>
@@ -45,26 +51,26 @@
            </div>
        </div>
     </section>
-    <section>
-        <h3>SOME OF MY RECENT PROJECTS<h3>
-       <div class="grid place-items-center px-16">
+    <section class="md:mx-32">
+        <h3><a href="#">SOME OF MY RECENT PROJECTS</a><h3>
+       <div class="grid place-items-center px-16 md:grid-cols-3 md:gap-6 md:mx-auto">
         <div class="project-card">
             <img src="../assests\clip board-desktop-preview.jpg" alt="" loading="lazy">
             <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt assumenda in soluta nesciunt fuga aperiam nihil, alias minima asperiores minus, nostrum ea eaque. Laboriosam, quae itaque iste sapiente magni atque!
             </p> -->
         </div>
         <div class="project-card">
-        <a href=""><img src="" alt=""loading="lazy"></a>
-            <p></p>
-        </div>
-
-        <div class="project-card">
-            <a href=""><img src="../assests\stats-preview-card-desktop-preview.jpg" alt=""loading="lazy"></a>
+        <a href=""><img src="../assests\testimonial-grid-desktop-preview.jpg" alt=""loading="lazy"></a>
             <p></p>
         </div>
 
         <div class="project-card" >
             <a href=""><img src="../assests\flyo-landing-page-desktop-preview.jpg" alt=""loading="lazy"></a> 
+            <p></p>
+        </div>
+
+        <div class="project-card">
+            <a href=""><img src="../assests\stats-preview-card-desktop-preview.jpg" alt=""loading="lazy"></a>
             <p></p>
         </div>
 
@@ -83,16 +89,16 @@
         </div>
     </div>
     </section>
-    <section class="rounded-xl shadow-2xl mb-4 mx-6">
+    <section class="rounded-xl shadow-2xl mb-4 mx-6 md:mx-32">
         <h4>GET INTOUCH WITH ME</h4>
             <form action="" method="post" class="text-start mx-4 grid gap-7">
                <div>
                 <label class="field-label" for="name">NAME</label>
-                <input class="input-field mt-2 pl-2 h-9" type="text" id="name" placeholder="Enter Your Name" required>
+                <input class="input-field mt-2 pl-2 h-9 md:h-12" type="text" id="name" placeholder="Enter Your Name" required>
                </div>
                 <div>
                     <label class="field-label " for="email">EMAIL</label>
-                <input  class="input-field mt-2 pl-2 h-9" type="email" id="email " placeholder="Enter Your Email" required>
+                <input  class="input-field mt-2 pl-2 h-9 md:h-12" type="email" id="email " placeholder="Enter Your Email" required>
                 </div>
                <div>
                 <label class="field-label" for="message">MESSAGE</label>
@@ -101,21 +107,23 @@
                 <input class="bg-primary-dark-green py-1 w-full text-xl uppercase rounded-md" type="submit" value="submit" id="submit-btn">
             </form>
     </section>
-    <div class="grid gap-4 fixed bottom-1/2 right-1">
-        <a href="">
+    <div class="grid gap-12 fixed bottom-1/2 right-1">
+        <a href="https://twitter.com/SamwelOmwenga97?s=09" target="_blank">
             <svg class="social-svg" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="1.23em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 256 209"><path fill="#55acee" d="M256 25.45a105.04 105.04 0 0 1-30.166 8.27c10.845-6.5 19.172-16.793 23.093-29.057a105.183 105.183 0 0 1-33.351 12.745C205.995 7.201 192.346.822 177.239.822c-29.006 0-52.523 23.516-52.523 52.52c0 4.117.465 8.125 1.36 11.97c-43.65-2.191-82.35-23.1-108.255-54.876c-4.52 7.757-7.11 16.78-7.11 26.404c0 18.222 9.273 34.297 23.365 43.716a52.312 52.312 0 0 1-23.79-6.57c-.003.22-.003.44-.003.661c0 25.447 18.104 46.675 42.13 51.5a52.592 52.592 0 0 1-23.718.9c6.683 20.866 26.08 36.05 49.062 36.475c-17.975 14.086-40.622 22.483-65.228 22.483c-4.24 0-8.42-.249-12.529-.734c23.243 14.902 50.85 23.597 80.51 23.597c96.607 0 149.434-80.031 149.434-149.435c0-2.278-.05-4.543-.152-6.795A106.748 106.748 0 0 0 256 25.45"/></svg> 
         </a>
-        <a href="">
+        <a href="https://github.com/" target="_blank">
           <svg class="social-svg" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 48 48"><g fill-rule="evenodd" clip-rule="evenodd"><path d="M24 4C12.9543 4 4 12.9543 4 24C4 35.0457 12.9543 44 24 44C35.0457 44 44 35.0457 44 24C44 12.9543 35.0457 4 24 4ZM0 24C0 10.7452 10.7452 0 24 0C37.2548 0 48 10.7452 48 24C48 37.2548 37.2548 48 24 48C10.7452 48 0 37.2548 0 24Z"/><path d="M19.183 45.4715C18.9896 45.2218 18.9896 42.9972 19.183 38.798C17.1112 38.8695 15.8022 38.7257 15.256 38.3666C14.4368 37.8279 13.6166 36.1666 12.8889 34.9958C12.1612 33.825 10.546 33.6399 9.8938 33.3782C9.24158 33.1164 9.07785 32.0495 11.691 32.8564C14.3042 33.6633 14.4316 35.8606 15.256 36.3744C16.0804 36.8882 18.0512 36.6634 18.9446 36.2518C19.8379 35.8402 19.7722 34.3077 19.9315 33.7006C20.1329 33.1339 19.423 33.0082 19.4074 33.0036C18.5353 33.0036 13.9537 32.0072 12.6952 27.5705C11.4368 23.1339 13.0579 20.234 13.9227 18.9874C14.4992 18.1563 14.4482 16.3851 13.7697 13.6736C16.2333 13.3588 18.1344 14.1342 19.4732 16C19.4745 16.0107 21.2283 14.9571 24 14.9571C26.7718 14.9571 27.7551 15.8153 28.514 16C29.2728 16.1847 29.8798 12.734 34.5666 13.6736C33.5881 15.5968 32.7686 18 33.3941 18.9874C34.0195 19.9748 36.4742 23.1146 34.9664 27.5705C33.9611 30.5412 31.9851 32.3522 29.0382 33.0036C28.7002 33.1114 28.5313 33.2854 28.5313 33.5254C28.5313 33.8855 28.9881 33.9248 29.6463 35.6116C30.085 36.7361 30.1167 39.9479 29.7413 45.2469C28.7904 45.489 28.0506 45.6515 27.5219 45.7346C26.5845 45.8819 25.5667 45.9645 24.5666 45.9964C23.5666 46.0283 23.2193 46.0247 21.8368 45.896C20.9151 45.8102 20.0305 45.6687 19.183 45.4715Z"/></g></svg><path fill="#55acee" d="M256 25.45a105.04 105.04 0 0 1-30.166 8.27c10.845-6.5 19.172-16.793 23.093-29.057a105.183 105.183 0 0 1-33.351 12.745C205.995 7.201 192.346.822 177.239.822c-29.006 0-52.523 23.516-52.523 52.52c0 4.117.465 8.125 1.36 11.97c-43.65-2.191-82.35-23.1-108.255-54.876c-4.52 7.757-7.11 16.78-7.11 26.404c0 18.222 9.273 34.297 23.365 43.716a52.312 52.312 0 0 1-23.79-6.57c-.003.22-.003.44-.003.661c0 25.447 18.104 46.675 42.13 51.5a52.592 52.592 0 0 1-23.718.9c6.683 20.866 26.08 36.05 49.062 36.475c-17.975 14.086-40.622 22.483-65.228 22.483c-4.24 0-8.42-.249-12.529-.734c23.243 14.902 50.85 23.597 80.51 23.597c96.607 0 149.434-80.031 149.434-149.435c0-2.278-.05-4.543-.152-6.795A106.748 106.748 0 0 0 256 25.45"/></svg>  
         </a>
-        <a href=""></a>
+        <a href="https://www.linkedin.com/in/samwel-omwenga-7339b8215" target="_blank">
+            <svg class="social-svg  xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 256 256"><path fill="#0A66C2" d="M218.123 218.127h-37.931v-59.403c0-14.165-.253-32.4-19.728-32.4c-19.756 0-22.779 15.434-22.779 31.369v60.43h-37.93V95.967h36.413v16.694h.51a39.907 39.907 0 0 1 35.928-19.733c38.445 0 45.533 25.288 45.533 58.186l-.016 67.013ZM56.955 79.27c-12.157.002-22.014-9.852-22.016-22.009c-.002-12.157 9.851-22.014 22.008-22.016c12.157-.003 22.014 9.851 22.016 22.008A22.013 22.013 0 0 1 56.955 79.27m18.966 138.858H37.95V95.967h37.97v122.16ZM237.033.018H18.89C8.58-.098.125 8.161-.001 18.471v219.053c.122 10.315 8.576 18.582 18.89 18.474h218.144c10.336.128 18.823-8.139 18.966-18.474V18.454c-.147-10.33-8.635-18.588-18.966-18.453"/></svg>
+        </a>
     </div>
     <div class="fixed bottom-4 right-4">
         <svg class=" h-12 w-12 cursor-pointer" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 64 64"><circle cx="32" cy="32" r="30" fill="#4fd1d9"/><path fill="#fff" d="M48 30.3L32 15L16 30.3h10.6V49h10.3V30.3z"/></svg>
     </div>
-    <footer class="grid text-center bg-primary-dark-green py-4">
+    <footer class="grid text-center bg-primary-dark-green py-4 md:flex md:justify-center md:align-middle gap-5">
         <p>&copy;<span class="ml-2">Copyright 2022</span></p>
-        <p>Build By <a href="">SAMWEL OMWENGA</a></p>
+        <p>Build By <a href="https://twitter.com/SamwelOmwenga97" target="_blank">SAMWEL OMWENGA</a></p>
     </footer>
 </body>
 </html>
