--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,10 @@
         <nav class="flex place-content-between place-items-center mx-8 mb-16 md:mr-32">
             <p class="text-2xl md:text-3xl font-semibold mb-4 text-primary-dark-green"><a href="#">SAMWEL OMWENGA</a></p>
              <ul class="hidden   text-primary-light-green font-semibold text-xl md:flex md:gap-x-12">
-                 <li><a href="">ABOUT ME</a> </li>
-                 <li><a href="">SKILLS</a></li>
-                 <li><a href="">RECENT PROJECTS</a></li>
-                 <li><a href="">GET INTOUCH</a></li>
+                 <li><a href="#ABOUT ME">ABOUT ME</a> </li>
+                 <li><a href="#MY SKILLS">MY SKILLS</a></li>
+                 <li><a href="#MY RECENT PROJECTS">MY RECENT PROJECTS</a></li>
+                 <li><a href="#GET INTOUCH WITH ME">GET INTOUCH WITH ME</a></li>
              </ul>
              <button class="md:hidden">
                  <svg class="" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="2em" height="2em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 16 16"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M2.75 12.25h10.5m-10.5-4h10.5m-10.5-4h10.5"/></svg>
@@ -27,13 +27,13 @@
         </div>
     </header>
     <section class="mx-10 rounded-xl shadow-2xl md:mx-32">
-        <h1><a href="#">ABOUT ME</a></h1>
+        <h1 id="ABOUT ME"><a href="#">ABOUT ME</a></h1>
         <p class="px-6 pb-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni iusto ad nobis quibusdam modi similique. Nihil, quibusdam soluta molestias Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, sapiente tempora soluta dicta ut sequi, fugiat beatae repellendus ipsum animi voluptatum perspiciatis repudiandae vero cum. Perferendis facilis dolores quis odit.
         Ad placeat obcaecati quibusdam, suscipit similique, aperiam distinctio quia voluptatum ipsa culpa sed illum cum? Dolor ab quibusdam fugit laborum laudantium architecto eveniet facere voluptatum, libero natus nulla ea corporis!
         Sint rerum necessitatibus molestias laborum, voluptatem, dolores sed maxime error in consequuntur atque natus? Nobis fugit voluptatem voluptate, porro accusantium nulla praesentium accusamus vero voluptatibus perferendis, ducimus labore, deserunt sint.</p>
     </section>
     <section class="md:mx-32">
-        <h2><a href="#">MY SKILLS</a></h2>
+        <h2 id="MY SKILLS"><a href="#">MY SKILLS</a></h2>
        <div class="grid grid-cols-3 gap-3 p-6 place-items-center content-center">
            <div class="skills-svg"> 
             <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="5rem" height="5rem" preserveAspectRatio="xMidYMid meet" viewBox="0 0 256 361"><path fill="#E44D26" d="m255.555 70.766l-23.241 260.36l-104.47 28.962l-104.182-28.922L.445 70.766h255.11Z"/><path fill="#F16529" d="m128 337.95l84.417-23.403l19.86-222.49H128V337.95Z"/><path fill="#EBEBEB" d="M82.82 155.932H128v-31.937H47.917l.764 8.568l7.85 88.01H128v-31.937H85.739l-2.919-32.704Zm7.198 80.61h-32.06l4.474 50.146l65.421 18.16l.147-.04V271.58l-.14.037l-35.568-9.604l-2.274-25.471Z"/><path d="M24.18 0h16.23v16.035h14.847V0h16.231v48.558h-16.23v-16.26H40.411v16.26h-16.23V0Zm68.65 16.103H78.544V0h44.814v16.103h-14.295v32.455h-16.23V16.103h-.001ZM130.47 0h16.923l10.41 17.062L168.203 0h16.93v48.558h-16.164V24.49l-11.166 17.265h-.28L146.35 24.49v24.068h-15.88V0Zm62.74 0h16.235v32.508h22.824v16.05h-39.06V0Z"/><path fill="#FFF" d="M127.89 220.573h39.327l-3.708 41.42l-35.62 9.614v33.226l65.473-18.145l.48-5.396l7.506-84.08l.779-8.576H127.89v31.937Zm0-64.719v.078h77.143l.64-7.178l1.456-16.191l.763-8.568H127.89v31.86Z"/></svg>
@@ -52,7 +52,7 @@
        </div>
     </section>
     <section class="md:mx-32">
-        <h3><a href="#">SOME OF MY RECENT PROJECTS</a><h3>
+        <h3 id="MY RECENT PROJECTS"><a href="#">MY RECENT PROJECTS</a><h3>
        <div class="grid place-items-center px-16 md:grid-cols-3 md:gap-6 md:mx-auto">
         <div class="project-card">
             <img src="../assests\clip board-desktop-preview.jpg" alt="" loading="lazy">
@@ -90,7 +90,7 @@
     </div>
     </section>
     <section class="rounded-xl shadow-2xl mb-4 mx-6 md:mx-32">
-        <h4>GET INTOUCH WITH ME</h4>
+        <h4 id="GET INTOUCH WITH ME">GET INTOUCH WITH ME</h4>
             <form action="" method="post" class="text-start mx-4 grid gap-7">
                <div>
                 <label class="field-label" for="name">NAME</label>
