--- a/public/index.html
+++ b/public/index.html
@@ -7,27 +7,27 @@
     <link rel="stylesheet" href="/public/styles.css">
     <title>SAMWEL OMWENGA PORTFOLIO</title>
 </head>
-<body class="text-neutral-dark-green py-10">
-    <header class="bg-[url('/assests/image_2d751ad1-8728-4382-80be-5b26d66cb3b920220613_192526.jpg')] bg-no-repeat bg-auto bg-center">
-        <nav class="flex place-content-between place-items-center mx-8 mb-16 md:mr-32">
-            <p class="text-2xl md:text-3xl font-semibold mb-4 text-primary-dark-green"><a href="#">SAMWEL OMWENGA</a></p>
-             <ul class="hidden   text-primary-light-green font-semibold text-xl md:flex md:gap-x-12">
-                 <li><a href="#ABOUT ME">ABOUT ME</a> </li>
-                 <li><a href="#MY SKILLS">MY SKILLS</a></li>
-                 <li><a href="#MY RECENT PROJECTS">MY RECENT PROJECTS</a></li>
-                 <li><a href="#GET INTOUCH WITH ME">GET INTOUCH WITH ME</a></li>
+<body class="text-neutral-dark-green py-7 bg-gray-200">
+        <nav class="bg-neutral-white flex place-content-between align-middle px-8 py-4 mb-16 md:pr-32 sticky top-0 left-0 z-10">
+            <p class="text-2xl md:text-3xl font-semibold mb-4 text-primary-dark-green"><a href="#">SO</a></p>
+             <ul class="hidden   text-primary-dark-green font-semibold text-xl md:flex md:gap-x-12">
+                 <li><a class="nav-link"  href="#ABOUT ME">ABOUT ME</a> </li>
+                 <li><a class="nav-link" href="#MY SKILLS">MY SKILLS</a></li>
+                 <li><a class="nav-link" href="#MY RECENT PROJECTS">MY RECENT PROJECTS</a></li>
+                 <li><a class="nav-link" href="#GET INTOUCH WITH ME">GET INTOUCH WITH ME</a></li>
              </ul>
-             <button class="md:hidden">
+             <button id="burger-menu" class="md:hidden">
                  <svg class="" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="2em" height="2em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 16 16"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M2.75 12.25h10.5m-10.5-4h10.5m-10.5-4h10.5"/></svg>
              </button>
-         </nav>
-         <div class="md:mx-32">
-            <p>HELLO THERE, I`M <span>SAMWEL OMWENGA</span></p>
-            <p><span>SOFTWARE DEVELOPER+</span><span>QA ENGINER+</span><span>TECHNICAL WRITTTER</span></p>
-        </div>
-    </header>
+         </nav> 
     <section class="mx-10 rounded-xl shadow-2xl md:mx-32">
         <h1 id="ABOUT ME"><a href="#">ABOUT ME</a></h1>
+           <div class="mb-5 md:text-left  md:mx-10">
+            <p class="mb-2">HELLO THERE, I`M  <span class="font-semibold">SAMWEL OMWENGA</span></p>
+            <p class="font-semibold text-lg">SOFTWARE DEVELOPER</p>
+            <p class="font-semibold text-lg">QA ENGINER</p>
+            <p class="font-semibold ">TECHNICAL WRITTTER</p>
+           </div>
         <p class="px-6 pb-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni iusto ad nobis quibusdam modi similique. Nihil, quibusdam soluta molestias Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, sapiente tempora soluta dicta ut sequi, fugiat beatae repellendus ipsum animi voluptatum perspiciatis repudiandae vero cum. Perferendis facilis dolores quis odit.
         Ad placeat obcaecati quibusdam, suscipit similique, aperiam distinctio quia voluptatum ipsa culpa sed illum cum? Dolor ab quibusdam fugit laborum laudantium architecto eveniet facere voluptatum, libero natus nulla ea corporis!
         Sint rerum necessitatibus molestias laborum, voluptatem, dolores sed maxime error in consequuntur atque natus? Nobis fugit voluptatem voluptate, porro accusantium nulla praesentium accusamus vero voluptatibus perferendis, ducimus labore, deserunt sint.</p>
