Add form action link

--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,7 @@
     </section>
     <section class="rounded-xl shadow-2xl mb-4 mx-6 md:mx-32">
         <h4 id="GET INTOUCH WITH ME">GET INTOUCH WITH ME</h4>
-            <form action="" method="post" class="text-start mx-4 grid gap-7">
+            <form action="https://formspree.io/f/mzboqpkb" method="post" class="text-start mx-4 grid gap-7">
                <div>
                 <label class="field-label" for="name">NAME</label>
                 <input class="input-field mt-2 pl-2 h-9 md:h-12" type="text" id="name" placeholder="Enter Your Name" required>
