add duratiion for scaling headings

--- a/public/index.html
+++ b/public/index.html
@@ -28,9 +28,7 @@
             <p class="font-semibold text-lg">QA ENGINER</p>
             <p class="font-semibold ">TECHNICAL WRITTTER</p>
            </div>
-        <p class="px-6 pb-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni iusto ad nobis quibusdam modi similique. Nihil, quibusdam soluta molestias Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, sapiente tempora soluta dicta ut sequi, fugiat beatae repellendus ipsum animi voluptatum perspiciatis repudiandae vero cum. Perferendis facilis dolores quis odit.
-        Ad placeat obcaecati quibusdam, suscipit similique, aperiam distinctio quia voluptatum ipsa culpa sed illum cum? Dolor ab quibusdam fugit laborum laudantium architecto eveniet facere voluptatum, libero natus nulla ea corporis!
-        Sint rerum necessitatibus molestias laborum, voluptatem, dolores sed maxime error in consequuntur atque natus? Nobis fugit voluptatem voluptate, porro accusantium nulla praesentium accusamus vero voluptatibus perferendis, ducimus labore, deserunt sint.</p>
+        <p class="px-6 pb-6"></p>
     </section>
     <section class="md:mx-32">
         <h2 id="MY SKILLS" class="heading"><a href="#MY SKILLS">MY SKILLS</a></h2>
