Add  stats preview card links

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="public/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>SAMWEL OMWENGA PORTFOLIO</title>
 </head>
 <body class="text-neutral-dark-green py-7 bg-gray-200">
@@ -80,8 +80,8 @@
         <div class="project-card">
             <a href=""><img src="../assests\stats-preview-card-desktop-preview.jpg" alt="stats-preview-card-desktop-preview"loading="lazy"></a>
             <p class="project-heading">STATS PREVIEW CARD</p>
-            <a class="live-preview-link" href="" target="_blank">Live Preview</a>
-            <a  class="github-link" href="" target="_blank">Git hub repo</a>
+            <a class="live-preview-link" href="https://samwelomwenga.github.io/stats-preview-card-component/" target="_blank">Live Preview</a>
+            <a  class="github-link" href="https://github.com/Samwelomwenga/stats-preview-card-component" target="_blank">Git hub repo</a>
         </div>
 
         <div class="project-card" >
