Change project-cards images

--- a/index.html
+++ b/index.html
@@ -58,47 +58,47 @@
         <h3 id="MY RECENT PROJECTS" class="heading" ><a href="#MY RECENT PROJECTS">MY RECENT PROJECTS</a><h3>
        <div class="grid place-items-center px-16 md:grid-cols-3 md:gap-6 md:mx-auto">
         <div class="project-card">
-            <img src="../assests\clip board-desktop-preview.jpg" alt="clip board-desktop-preview" loading="lazy">
+            <img src="assests/clip board-desktop-preview.jpg " alt="clip board-desktop-preview" loading="lazy">
             <p class="project-heading">CLIP BOARD LANDING PAGE </p>
             <a class="live-preview-link" href="https://samwelomwenga.github.io/clipboard-landing-page/" target="_blank">Live Preview</a>
             <a class="github-link" href="https://github.com/Samwelomwenga/clipboard-landing-page" target="_blank">Git hub repo</a>
         </div>
         <div class="project-card">
-        <a href=""><img src="../assests\testimonial-grid-desktop-preview.jpg" alt="testimonial-grid-desktop-preview"loading="lazy"></a>
+        <a href=""><img src="assests/testimonial-grid-desktop-preview.jpg" alt="testimonial-grid-desktop-preview"loading="lazy"></a>
             <p class="project-heading">TESTIMONIAL GRID SECTION</p>
             <a class="live-preview-link" href="https://samwelomwenga.github.io/testimonials-grid-section-component-/" target="_blank">Live Preview</a>
             <a  class="github-link" href="https://github.com/Samwelomwenga/testimonials-grid-section-component-" target="_blank">Git hub repo</a>
         </div>
 
         <div class="project-card" >
-            <a href=""><img src="../assests\flyo-landing-page-desktop-preview.jpg" alt="flyo-landing-page-desktop-preview"loading="lazy"></a> 
+            <a href=""><img src="assests/flyo-landing-page-desktop-preview.jpg" alt="flyo-landing-page-desktop-preview"loading="lazy"></a> 
             <p class="project-heading">FLYO LANDING PAGE</p>
             <a class="live-preview-link" href="" target="_blank">Live Preview</a>
             <a  class="github-link" href="" target="_blank">Git hub repo</a>
         </div>
 
         <div class="project-card">
-            <a href=""><img src="../assests\stats-preview-card-desktop-preview.jpg" alt="stats-preview-card-desktop-preview"loading="lazy"></a>
+            <a href=""><img src="assests/stats-preview-card-desktop-preview.jpg" alt="stats-preview-card-desktop-preview"loading="lazy"></a>
             <p class="project-heading">STATS PREVIEW CARD</p>
             <a class="live-preview-link" href="https://samwelomwenga.github.io/stats-preview-card-component/" target="_blank">Live Preview</a>
             <a  class="github-link" href="https://github.com/Samwelomwenga/stats-preview-card-component" target="_blank">Git hub repo</a>
         </div>
 
         <div class="project-card" >
-            <a href=""><img src="../assests\nft-preview-card-desktop-preview.jpg" alt="nft-preview-card-desktop-preview"loading="lazy"></a>
+            <a href=""><img src="assests/nft-preview-card-desktop-preview.jpg" alt="nft-preview-card-desktop-preview"loading="lazy"></a>
             <p class="project-heading">NFT PREVIEW CARD</p>
             <a class="live-preview-link" href="https://samwelomwenga.github.io/nft-preview-card-component-/" target="_blank">Live Preview</a>
             <a  class="github-link" href="https://github.com/Samwelomwenga/nft-preview-card-component-" target="_blank">Git hub repo</a>
         </div>
 
         <div class="project-card">
-            <a href=""><img src="../assests\four-card-feature-section-desktop-preview.jpg" alt="four-card-feature-section-desktop-preview"loading="lazy"></a>
+            <a href=""><img src="assests/four-card-feature-section-desktop-preview.jpg" alt="four-card-feature-section-desktop-preview"loading="lazy"></a>
             <p class="project-heading">FOUR CARD FEATURE SECTION</p>
             <a class="live-preview-link" href="https://samwelomwenga.github.io/four-card-feature-section-/" target="_blank">Live Preview</a>
             <a  class="github-link" href="https://github.com/Samwelomwenga/four-card-feature-section-" target="_blank">Git hub repo</a>
         </div>
         <div class="project-card" >
-            <a href=""><img src="../assests\3-column-desktop-preview.jpg" alt="3-column-desktop-preview"loading="lazy"></a>
+            <a href=""><img src="assests/3-column-desktop-preview.jpg" alt="3-column-desktop-preview"loading="lazy"></a>
             <p class="project-heading">3-COLUMN PREVIEW CARD</p>
             <a class="live-preview-link" href="" target="_blank">Live Preview</a>
             <a  class="github-link" href="" target="_blank">Git hub repo</a>
