--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <title>SAMWEL OMWENGA PORTFOLIO</title>
 </head>
 <body class="text-neutral-dark-green py-7 bg-gray-200">
+    <!-- navigation bar -->
         <nav class="sticky top-0 left-0 bg-neutral-white flex justify-between items-start py-2 md:py-6 mb-10 md:mb-20 overflow-x-hidden">
            <div class="pl-6 md:flex md:justify-between md:w-full">
             <p class="  text-2xl md:text-3xl font-semibold mb-4 text-primary-dark-green"><a href="">SO</a></p>
+            <!-- navigation list -->
             <ul id="primary-navigation" data-visible="false" class=" text-primary-dark-green font-semibold text-xl -translate-x-full md:translate-x-0 md:tr md:flex md:gap-14 md:mr-16">
                 <li class="nav-link"><a href="#ABOUT ME">ABOUT ME</a> </li>
                 <li class="nav-link"><a href="#MY SKILLS">MY SKILLS</a></li>
@@ -18,6 +20,7 @@
                 <li class="nav-link"><a href="#GET INTOUCH WITH ME">GET INTOUCH WITH ME</a></li>
             </ul>
            </div>
+           <!-- hamberger  menu -->
              <button aria-controls="primary-navigation" aria-expanded="false" id="burger-menu" class="mobile-nav-toggle block pr-3  absolute w-8 bg-cover bg-no-repeat aspect-square top-4 right-4 z-50 bg-[url('../assests/hamburger.svg')] md:hidden">
                 
              </button>
