--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="public/styles.css">
     <title>SAMWEL OMWENGA PORTFOLIO</title>
 </head>
-<body class="text-neutral-dark-green py-7 bg-gray-200">
+<body class="text-neutral-dark-green py-7 bg-gray-200 text-xl scroll-smooth">
     <!-- navigation bar -->
         <nav class="sticky top-0 left-0 bg-neutral-white flex justify-between items-start py-2 md:py-6 mb-10 md:mb-20 overflow-x-hidden">
            <div class="pl-6 md:flex md:justify-between md:w-full">
             <p class="  text-2xl md:text-3xl font-semibold mb-4 text-primary-dark-green"><a href="">SO</a></p>
             <!-- navigation list -->
-            <ul id="primary-navigation" data-visible="false" class=" text-primary-dark-green font-semibold text-xl -translate-x-full md:translate-x-0 md:tr md:flex md:gap-14 md:mr-16">
+            <ul id="primary-navigation" data-visible="false" class=" text-primary-dark-green font-semibold text-xl -translate-x-full  md:translate-x-0  md:flex md:gap-14 md:mr-16">
                 <li class="nav-link"><a href="#ABOUT ME">ABOUT ME</a> </li>
                 <li class="nav-link"><a href="#MY SKILLS">MY SKILLS</a></li>
                 <li class="nav-link"><a href="#MY RECENT PROJECTS">MY RECENT PROJECTS</a></li>
@@ -29,8 +29,8 @@
         <h1 id="ABOUT ME" class="heading"><a href="#ABOUT ME">ABOUT ME</a></h1>
            <div class="mb-5 md:text-left  md:mx-10">
             <p class="mb-2">HELLO THERE, I`M  <span class="font-semibold">SAMWEL OMWENGA</span></p>
-            <p class="font-semibold text-lg">SOFTWARE DEVELOPER</p>
-            <p class="font-semibold text-lg">QA ENGINER</p>
+            <p class="font-semibold ">SOFTWARE DEVELOPER</p>
+            <p class="font-semibold ">QA ENGINER</p>
             <p class="font-semibold ">TECHNICAL WRITTER</p>
            </div>
         <div class="px-6 pb-6 md:text-left">
@@ -76,8 +76,8 @@
         <div class="project-card" >
             <a href=""><img src="assests/flyo-landing-page-desktop-preview.jpg" alt="flyo-landing-page-desktop-preview"loading="lazy"></a> 
             <p class="project-heading">FLYO LANDING PAGE</p>
-            <a class="live-preview-link" href="" target="_blank">Live Preview</a>
-            <a  class="github-link" href="" target="_blank">Git hub repo</a>
+            <a class="live-preview-link" href="https://samwelomwenga.github.io/flyo-landing-page-with-two-column-layout-/" target="_blank">Live Preview</a>
+            <a  class="github-link" href="https://github.com/Samwelomwenga/flyo-landing-page-with-two-column-layout-" target="_blank">Git hub repo</a>
         </div>
 
         <div class="project-card">
@@ -144,6 +144,6 @@
         <p>&copy;<span class="ml-2">Copyright 2022</span></p>
         <p>Build By <a class="text-primary-light-green" href="https://twitter.com/SamwelOmwenga97" target="_blank">SAMWEL OMWENGA</a></p>
     </footer>
-    <script src="app.js"></script>
+    <script src="public/app.js"></script>
 </body>
 </html>
