--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body class="text-neutral-dark-green py-7 bg-gray-200 text-xl scroll-smooth">
     <!-- navigation bar -->
-        <nav class="sticky top-0 left-0 bg-neutral-white flex justify-between items-start py-2 md:py-6 mb-10 md:mb-20 overflow-x-hidden">
+        <nav class="sticky top-0 left-0  flex justify-between items-start py-2 md:py-6 mb-10 md:mb-20 md:bg-neutral-white overflow-x-hidden">
            <div class="pl-6 md:flex md:justify-between md:w-full">
             <p class="  text-2xl md:text-3xl font-semibold mb-4 text-primary-dark-green"><a href="">SO</a></p>
             <!-- navigation list -->
-            <ul id="primary-navigation" data-visible="false" class=" text-primary-dark-green font-semibold text-xl -translate-x-full  md:translate-x-0  md:flex md:gap-14 md:mr-16">
+            <ul id="primary-navigation" data-visible="false" class=" text-primary-dark-green font-semibold  text-xl hidden   md:flex md:gap-14 md:mr-16">
                 <li class="nav-link"><a href="#ABOUT ME">ABOUT ME</a> </li>
                 <li class="nav-link"><a href="#MY SKILLS">MY SKILLS</a></li>
                 <li class="nav-link"><a href="#MY RECENT PROJECTS">MY RECENT PROJECTS</a></li>
