Add background to mobile navigation bar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="text-neutral-dark-green py-7 bg-gray-200 text-xl scroll-smooth">
     <!-- navigation bar -->
-        <nav class="sticky top-0 left-0  flex justify-between items-start py-2 md:py-6 mb-10 md:mb-20 md:bg-neutral-white overflow-x-hidden">
+        <nav class="sticky top-0 left-0  flex justify-between items-start py-2 md:py-6 mb-10 md:mb-20 bg-neutral-white overflow-x-hidden">
            <div class="pl-6 md:flex md:justify-between md:w-full">
             <p class="  text-2xl md:text-3xl font-semibold mb-4 text-primary-dark-green"><a href="">SO</a></p>
             <!-- navigation list -->
@@ -33,8 +33,8 @@
             <p class="font-semibold ">QA ENGINER</p>
             <p class="font-semibold ">TECHNICAL WRITTER</p>
            </div>
-        <div class="px-6 pb-6 md:text-left">
-            <p >I write about and develop responsive and sematic website using mobile first approach to solve problems and provide elegant,innovative and accessiible solution.I`m enthusiastic about  learning new and exicting technologies driven to find ways how tech can be improved</p>
+        <div class="px-6 pb-6 text-left">
+            <p >I write about and develop responsive and sematic website using mobile first approach to solve problems and provide elegant,innovative and accessiible solution.I`m enthusiastic about  learning new and exicting technologies driven to find ways how tech can be improved.</p>
         <p class="pt-1">I am a team player with great communication,organization and intergration skills which increase productivty to the team and value to the project.</p>
         </div>
     </section>
