Add time tracking dashboard project

--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
             <h3>
                 <div class="grid place-items-center px-16 md:grid-cols-3 md:gap-6 md:mx-auto">
                     <div class="project-card">
-                        <img src="assests/clip board-desktop-preview.jpg " alt="clip board-desktop-preview"
-                            loading="lazy">
-                        <p class="project-heading">TIME </p>
+                        <img src="assests/time-tracking-dashboard-desktop-preview.jpg "
+                            alt="time-tracking-dashboard-desktop-preview" loading="lazy">
+                        <p class="project-heading">TIME TRACKING DASHBOARD.</p>
                         <a class="live-preview-link" href="https://samwelomwenga.github.io/clipboard-landing-page/"
                             target="_blank">Live Preview</a>
                         <a class="github-link" href="https://github.com/Samwelomwenga/clipboard-landing-page"
